src/test/ui/self/elision/ref-mut-struct.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:11:9
   |
LL |     fn ref_Struct(self: &mut Struct, f: &u32) -> &u32 {
   |                                         ----     ----
   |                                         |
   |                                         this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     fn ref_Struct<'a>(self: &'a mut Struct, f: &'a u32) -> &u32 {
   |                  ++++        ++                 ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:15:9
   |
LL |     fn box_ref_Struct(self: Box<&mut Struct>, f: &u32) -> &u32 {
   |                                                  ----     ----
   |                                                  |
   |                                                  this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     fn box_ref_Struct<'a>(self: Box<&'a mut Struct>, f: &'a u32) -> &u32 {
   |                      ++++            ++                  ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:19:9
   |
LL |     fn pin_ref_Struct(self: Pin<&mut Struct>, f: &u32) -> &u32 {
   |                                                  ----     ----
   |                                                  |
   |                                                  this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     fn pin_ref_Struct<'a>(self: Pin<&'a mut Struct>, f: &'a u32) -> &u32 {
   |                      ++++            ++                  ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:23:9
   |
LL |     fn box_box_ref_Struct(self: Box<Box<&mut Struct>>, f: &u32) -> &u32 {
   |                                                           ----     ----
   |                                                           |
   |                                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     fn box_box_ref_Struct<'a>(self: Box<Box<&'a mut Struct>>, f: &'a u32) -> &u32 {
   |                          ++++                ++                   ++

error[E0623]: lifetime mismatch
  --> $DIR/ref-mut-struct.rs:27:9
   |
LL |     fn box_pin_ref_Struct(self: Box<Pin<&mut Struct>>, f: &u32) -> &u32 {
   |                                                           ----     ----
   |                                                           |
   |                                                           this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here
   |
   = note: each elided lifetime in input position becomes a distinct lifetime
help: consider introducing a named lifetime parameter and update trait if needed
   |
LL |     fn box_pin_ref_Struct<'a>(self: Box<Pin<&'a mut Struct>>, f: &'a u32) -> &u32 {
   |                          ++++                ++                   ++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0623`.
